--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,7 @@ jobs:
     uses: wtaxco/wtax-github-actions-workflows/.github/workflows/deploy-java-app.yml@IN-468-Add-environment-input
     with:
       boot-jar: dummy
+      known-hosts: ""
       ansible-inventory: inventory/developer.yml
       environment: dev
     secrets:
@@ -31,6 +32,7 @@ jobs:
     uses: wtaxco/wtax-github-actions-workflows/.github/workflows/deploy-java-app.yml@IN-468-Add-environment-input
     with:
       boot-jar: dummy
+      known-hosts: ""
       ansible-inventory: inventory/uat.yml
       environment: uat
     secrets:
@@ -43,6 +45,7 @@ jobs:
     uses: wtaxco/wtax-github-actions-workflows/.github/workflows/deploy-java-app.yml@IN-468-Add-environment-input
     with:
       boot-jar: dummy
+      known-hosts: ""
       ansible-inventory: inventory/prod.yml
       environment: prod
     secrets:
